tests/fixtures/LatestTests/VariableDeclarationTests/errors/int_to_str.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
var x:str = 5

